k8s/overlays/local/kiali/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-system
  labels:
    name: kiali-system
    environment: local
    project: solidity-security
    managed-by: kustomize
    istio-injection: enabled
